Add app.js for Vue.js logic, 404 error page and update .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,28 @@
 # JetBrains IDE
 .idea/
+*.iml
+*.iws
+*.ipr
 
-# Documentation
+# Documentation & Assets
 docs/
+*.pdf
+
+# OS Files
+.DS_Store
+Thumbs.db
+.env
+.env.local
+
+# Node/Build
+node_modules/
+dist/
+build/
+
+# Logs
+*.log
+npm-debug.log*
+
+# Cache
+.cache/
+.vscode/
